Modified speech voice

--- a/TextToSpeech/src/index.html
+++ b/TextToSpeech/src/index.html
@@ -15,10 +15,10 @@
           <br>
           <textarea></textarea>
         </div>
-        <button>Convert To Speech</button>
+        <button>Speaker Button</button>
       </form>
     </div>
-    <script src="script.js"></script>
+    <script src="Vocalize.js"></script>
 
   </body>
 </html>
